# mojo-like-Rust

./: Cargo.toml  README.md
.github/workflows/: release-build.yml
meta_nasm/: CMakeLists.txt  main.cpp  mera_nasm_builder.hpp  meta_ast.hpp  meta_codegen.hpp
pure_rust_backend/: ir_to_nasm.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  vm.rs
